--- a/src/static/css/content-style.css
+++ b/src/static/css/content-style.css
@@ -61,22 +61,17 @@
     display: inline-block;
 }
 
-.splitter-line {
-    width: 98%;
-    height: 2px;
-    margin-left: 1%;
-    background-color: #424242;
-}
-
 .movie-number {
     display: block;
     margin-left: 1%;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-right: 1%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 24.38px;
+    border-top: 2px solid #424242;
     color: #ffffff;
 }
 
@@ -136,22 +131,56 @@
     color: #ffffff;
 }
 
-.movie-options {
+.movie-options-closed {
     display: none;
     position: absolute;
     width: 36px;
     height: 36px;
     background-color: #2A202D;
     border-radius: 20px;
-    bottom: 0;
     right: 10px;
     top: 10px;
 }
+
+.movie-options-opened {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 190px;
+    top: 10px;
+    right: 30px;
+    background-color: #232323;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    line-height: 19.5px;
+    font-weight: 400;
+}
+
+.movie-options-close-button {
+    display: block;
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 30px;
+}
+
+.movie-options-option {
+    padding-left: 23px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-bottom: 10px;
+}
+
+.movie-options-option:hover {
+    background-color: #f65261;
+}
+
 .movie:hover {
     cursor: pointer;
 }
 
-.movie:hover .movie-options{
+.movie:hover .movie-options-closed{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
