--- a/src/static/css/modal.css
+++ b/src/static/css/modal.css
@@ -30,8 +30,8 @@
     color: #ffffff;
     font-size: 30px;
     font-weight: 400;
-    padding-top: 30px;
-    padding-right: 30px;
+    padding-top: 4%;
+    padding-right: 3%;
 }
 
 .modal-close-button:hover {
@@ -46,8 +46,8 @@
     line-height: 48.76px;
     letter-spacing: 1px;
     color: #ffffff;
-    padding-left: 60px;
-    padding-top: 70px;
+    padding-left: 6%;
+    padding-top: 4%;
 }
 
 .modal-text {
@@ -57,26 +57,27 @@
     font-size: 20px;
     line-height: 24.38px;
     color: #ffffff;
-    margin-top: 20px;
+    margin-top: 2%;
 }
 
 .modal-form {
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-bottom: 60px;
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-bottom: 6%;
 }
 
 .modal-form-group {
     display: inline-block;
-    margin-top: 40px;
+    margin-top: 3%;
 }
 
 .with-left-margin {
-    margin-left: 30px;
+    margin-left: 3%;
 }
 
 .modal-form-group-header {
     font-family: 'Montserrat', sans-serif;
+    display: block;
     font-weight: 600;
     font-size: 16px;
     line-height: 19.5px;
@@ -85,14 +86,15 @@
 }
 
 .modal-form-group-input {
-    height: 57px;
-    margin-top: 10px;
+    height: 47px;
+    margin-top: 1%;
     background-color: #323232;
     font-size: 20px;
     font-weight: 400;
     line-height: 24.38px;
     color: #ffffff;
     border: none;
+    position: relative;
 }
 
 .modal-form-overview {
@@ -108,7 +110,7 @@
 }
 
 .modal-form-control-buttons {
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     justify-content: end;
@@ -158,7 +160,7 @@
 .genre-dropdown-input {
     display: inline-block;
     width: 468px;
-    height: 57px;
+    height: 47px;
     background-color: #323232;
     font-size: 20px;
     font-weight: 400;
@@ -168,8 +170,8 @@
 }
 
 .genre-dropdown-toggler-wrapper {
-    width: 57px;
-    height: 57px;
+    width: 47px;
+    height: 47px;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
