--- a/src/static/css/content-style.css
+++ b/src/static/css/content-style.css
@@ -23,14 +23,14 @@
 
 .genres {
     margin-top: 2%;
-    width: 50%;
+    width: 75%;
     display: inline-block;
 }
 
 .sort-by {
     display: inline-block;
-    width: 17%;
-    margin-left: 33%;
+    width: 20%;
+    margin-left: 5%;
     font-size: 16px;
     font-weight: 400;
     font-family: 'Montserrat', sans-serif;
@@ -45,9 +45,36 @@
 }
 
 .sort-by-option {
-    width: 50%;
+    width: 44%;
     display: inline-block;
     margin-left: 5%;
+    position: relative;
+}
+
+.sort-by-option span {
+    padding-left: 5px;
+}
+
+.sort-by-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    display: flex;
+    flex-direction: column;
+    background-color: #424242;
+}
+
+.sort-by-options span {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+}
+
+.sort-by-options span:hover {
+    background-color: #555555;
+    cursor: pointer;
 }
 
 .arrow-down {
